--- a/page234.css
+++ b/page234.css
@@ -4,6 +4,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: rgb(110, 29, 29);
+    width: 1350px;
   }
   
   li {
@@ -21,6 +22,10 @@ ul {
   li a:hover:not(.active) {
     background-color: #111;
   }
+  body {
+    height: 190px;
+    max-width:  615px;
+}
   
   .active {
     background-color: #04AA6D;
@@ -67,7 +72,7 @@ ul {
 
   .b{
     position: relative;
-    left: -30px;
+    left: 700px;
     top: -100px;
     color: white;
   }
@@ -75,14 +80,14 @@ ul {
   .c{
     position: relative;
     left: 20px;
-    top: -100px;
+    top: -180px;
     color: white;
   }
 
   .d{
    position: relative;
-   left: -30px;
-   top: -60px;
+   left: 700px;
+   top: -250px;
    color: white;
   }
 
@@ -98,22 +103,22 @@ ul {
   .question{
     position: relative;
     left: 300px;
-    top: 200px;
+    top: 230px;
     right: 20px;
   }
 
   .x{
     position: relative;
     left: 20px;
-    top: -250px;
+    top: -270px;
     color: white;
   }
 
   .y{
 
     position: relative;
-    left: 735px;
-    top: -250px;
+    left: 740px;
+    top: -270px;
     color: white;
   }
 
@@ -121,12 +126,34 @@ ul {
     font-size: 30px;
     color: gainsboro;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: normal; 
+    font-weight: normal;
   }
   
   .z{
     position: relative;
     left: 10px;
-    top:  -220px;
+    top:  -260px;
     color: white;  
   }
+
+  .p{
+    position: relative;
+    left: 720px;
+    top: 30px;
+    color: white;
+  }
+
+  .ab{
+    position: relative;
+    left: 700px;
+    top: 0px;
+    color: white;
+  }
+
+  .bc{
+    position: relative;
+    left: 700px;
+    top: 0px;
+    color: white; 
+  }
+
