--- a/page234.css
+++ b/page234.css
@@ -1,188 +1,50 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(110, 29, 29);
-    width: 1350px;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: #111;
-  }
-  body {
-    height: 190px;
-    max-width:  615px;
-}
-  
-  .active {
-    background-color: #04AA6D;
-  }
-  
-  .moi{
-    font-size: 30px;
-    color: gainsboro;
-    text-align: left;
-    font-weight: normal;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-  
-  .toi{
-    font-size: 30px;
-    color: gainsboro;
-    text-align: right;
-    font-weight: normal;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  }
-
-  .orien{
-    position: relative;
-    left: 600px;
-    top: 0px;
-    right: 500px;
-    height: 150px;
-    width: 250px;
-  }
-
-  .orient{
-    position: relative;
-    left: 450px;
-    top: 20px;
-    right: 20px;
-  }
-
-  .a{
-    position: relative;
-    left: 20px;
-    top: -150px;
-    color: white;
-  }
-
-  .b{
-    position: relative;
-    left: 700px;
-    top: -100px;
-    color: white;
-  }
-
-  .c{
-    position: relative;
-    left: 20px;
-    top: -180px;
-    color: white;
-  }
-
-  .d{
-   position: relative;
-   left: 700px;
-   top: -250px;
-   color: white;
-  }
-
-  .reponse{
-    position: relative;
-    left: -300px;
-    top: 0px;
-    right: 300px;
-    height: 250px;
-    width: 725px;
-  }
-
-  .question{
-    position: relative;
-    left: 300px;
-    top: 230px;
-    right: 20px;
-  }
-
-  .x{
-    position: relative;
-    left: 20px;
-    top: -270px;
-    color: white;
-  }
-
-  .y{
-
-    position: relative;
-    left: 740px;
-    top: -270px;
-    color: white;
-  }
-
-  .patoi{
-    font-size: 30px;
-    color: gainsboro;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: normal;
-  }
-  
-  .z{
-    position: relative;
-    left: 10px;
-    top:  -260px;
-    color: white;  
-  }
-
-  .p{
-    position: relative;
-    left: 720px;
-    top: 30px;
-    color: white;
-  }
-
-  .ab{
-    position: relative;
-    left: 710px;
-    top: -230px;
-    color: white;
-  }
-
-  .bc{
-    position: relative;
-    left: 710px;
-    top: -240px;
-    color: white; 
-  }
-
-  .dev{
-    position: relative;
-    left: -270px;
-    top: 0px;
-    right: 300px;
-  }
-
-  .ops{
-    position: relative;
-    left: 1150px;
-    top: -120px;
-    right: 20px;
-    height: 250px;
-    width: 450px;
-  }
-
-  .chips{
-    position: relative;
-    left: 20px;
-    top: -250px;
-    color: white;
-  }
-
-  .ch{
-    position: relative;
-    left: 20px;
-    top: -250px;
-    color:white;
-  }
+<!DOCTYPE html>
+<html>
+<head>
+    <title>L'entreprise</title>
+    <meta charset=" utf-8">
+    <link href="page234.css" rel="stylesheet">
+</head>
+<body>
+    <style>
+        body{
+            background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/11/15-Presentation-Background-Examples10.png);
+            background-size: 115%;
+            background-repeat: no-repeat;
+            background-position: 0px 0px;
+        }
+        </style>
+    <ul>
+      <li><a href="index.html">Acceuil</a></li>
+      <li style="float:right"><a class="active" href="https://enetpartner.fr/">About</a></li>
+    </ul>
+        <img src="https://enetpartner.com/logo.png">
+        <div class="dev"><img class="ops" src="https://www.planetbuilders.co.uk/wp-content/uploads/devops_chain_white.jpg"/></div>
+    <div class="chips">
+    <h1 style="color:white; font-family: Courier New, Monospace;">
+        Les métiers </h1>
+       <div class="moi">
+        - Ingénieur DevOps<br>(Ingenieur logiciel/Chef de projet)</div>
+    </div>
+    <div class="ab">
+    <h1 style="color: white;text-align: right; font-family: Courier New, Monospace;">
+        Les missions </h1>
+        <div class="toi">
+         - Crée des SiteWeb<br> - Répondre à la demande des clients</div>
+    </div>
+    <div class="ch">
+    <h1 style="color: white; font-family: Courier New, Monospace;">
+        Personnel </h1>
+        <div class="moi">
+         - Président <br> 
+         - Contrat d'alternance le plus souvent </div>
+    </div> 
+    <div class="bc"> 
+    <h1 style="color: white; text-align: right; font-family: Courier New, Monospace;">
+        Les horaires </h1>
+        <div class="toi">
+            - Alternance: 9h/13h-14h/17h <br>
+            - Président:9h/19h</div>
+    </div>
+</body>
+</html>
